syntax = "proto3";


package proto;


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}


// The greeting service definition.
service Greeter {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}


// 請求數據 Request格式定義
message BidStreamRequest {
    string input = 1;
}
// 響應數據Response格式定義
message BidStreamReply {
    string output = 1;
}

service Chat {    
    rpc BidStream(stream BidStreamRequest) returns (stream BidStreamReply) {}
}